Ensure java respects cgroup settings